# Nivesh-Platform

./: .gitignore  BHARTIARTL.json  BLOCKERS.md  CLAUDE.md  NIVESH_ARCHITECTURE.md  NIVESH_DB_PHASE1_FINAL.md  NIVESH_IMPLEMENTATION_PLAN.md  NIVESH_PHASE2_PLAN.md  NIVESH_PHASE3_PLAN.md  NIVESH_PHASE4_PLAN.md  NIVESH_PHASE5_PLAN.md  NIVESH_PHASE6_PLAN.md  NIVESH_PHASE7_PLAN.md  README.md  RELEASE_NOTES.md  TODO.md  check_settings.py  fundamental_data_extractor.py  package-lock.json  requirements-dev.txt  requirements.txt  start.sh  stitch-design.html  test.py
.stitch/: metadata.json  metadata_elite.json
backend/: .env.example  .watchfilesignore  README.md  alembic.ini  check_baj.py  check_benchmarks.py  check_data.py  check_fundamentals.py  check_non_finite.py  cleanup_db.py  docker-compose.yml  dump_audit.py  final_check.py  inspect_keys.py  migrate.py  nav_history_119598.csv  populate_ratios.py  requirements.txt  run_scorer.py  test_api_simple.py  test_endpoints.py  test_filters.py  verify_fix.py
docs/: API.md  API_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BACKEND.md  BACKEND_IMPLEMENTATION_PLAN.md  CODE_REVIEW.md  COMPARE_MF_LLD.md  CONTRIBUTING.md  DATABASE.md  E2E_TEST_PLAN.md  FEATURES.md  FEATURE_MF_COMPARISON.md  FRONTEND.md  GETTING_STARTED.md  INFRASTRUCTURE.md  INSTALLATION.md  MF_COMPARISON_END_TO_END_LLD.md  MIGRATION_LLD_TIMESCALE_TO_PGSQL.md  NIVESH_CLIENT_GUIDE.md  OVERVIEW.md  SETUP.md  STOCK_DATA_PIPELINE_PLAN.md  (+8 more)
nivesh-shared/: CLAUDE.md  __init__.py  pyproject.toml
nivesh-shared/schemas/: __init__.py  auth.py  funds.py  market.py  stocks.py
(+510 files in other folders)
