[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nivesh-shared"
version = "0.1.0"
description = "Shared Pydantic schemas for Nivesh Platform — the API contract artifact"
dependencies = ["pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["schemas*"]
